# python-readability

./: .gitignore  .travis.yml  CREDITS  Makefile  README  README.md  README.rst  pyproject.toml  regression_test.py  requirements-dev.txt  setup.py  test.py  tox.ini
.github/workflows/: python-package.yml
doc/source/: conf.py
readability/: __init__.py  cleaners.py  debug.py  encoding.py  htmls.py  readability.py  urlfetch.py
readability/compat/: __init__.py
regression_test_data/: deadspin-000-orig.html  nytimes-001.yaml
src/readability_lxml/: __init__.py  client.py  encoding.py  htmls.py  readability.py  urlfetch.py
src/tests/: gen_test.py  helpers.py  regression.py  test_article_only.py  test_readability.py  test_sample_articles.py
src/tests/regression_test_data/: basic-multi-page-2.html  basic-multi-page-expected.html  basic-multi-page.html  cnet-000.yaml  duplicate-page-article.html  duplicate-page-duplicate.html  duplicate-page-unique.html  espn-000-rdbl.html  espn-000.yaml  mit-000-orig.html  nytimes-000-rdbl.html  nytimes-000.yaml  nytimes-001-orig-2.html  nytimes-001-orig-3.html  nytimes-001-orig-4.html  nytimes-001-orig-5.html  nytimes-001-orig.html  nytimes-001-rdbl.html  nytimes-001.yaml  nytimes-next-page.html  washingtonpost-000-rdbl.html  washingtonpost-000.yaml
src/tests/samples/: nyt.sample.html
src/tests/test_data/: arstechnica-000-orig.html  (+7 more)
test_data/: arstechnica-000.yaml  basic-multi-page-3.html  businessinsider-000.yaml  deadspin-000.yaml
tests/: test_article_only.py
tests/samples/: summary-keep-all-images.sample.html
(+4 files in other folders)
